Fixed issue: Fiexed issue with default displays colurs not visible

--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ input {
   width: 100%;
   text-align: right;
   padding: 0 1rem;
-  color: #fff;
   border: none;
   outline: none;
   background: transparent;
